--- a/Vidly_V2/Vidly_V2/Views/Movies/Index.cshtml
+++ b/Vidly_V2/Vidly_V2/Views/Movies/Index.cshtml
@@ -16,8 +16,9 @@ else
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>Movie Id</th>
+                <th>Id</th>
                 <th>Movie Name</th>
+                <th>Genre</th>
             </tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@ else
                     <td>
                         @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
                     </td>
+                    <td>@movie.Genre.Name</td>
                 </tr>
             }
         </tbody>
