--- a/Vidly_V2/Vidly_V2/Views/Customers/Details.cshtml
+++ b/Vidly_V2/Vidly_V2/Views/Customers/Details.cshtml
@@ -6,4 +6,12 @@
 }
 
 <h2>@Model.Name - @Model.Id</h2>
+<ul>
+    <li>Membership Type : @Model.MembershipType.Name</li>
+    @if (Model.BirthDate.HasValue)
+    {
+    <li>Birthdate: @Model.BirthDate.Value.ToShortDateString()</li>
+    }
+</ul>
+
 
