--- a/Vidly_V2/Vidly_V2/Views/Customers/Index.cshtml
+++ b/Vidly_V2/Vidly_V2/Views/Customers/Index.cshtml
@@ -15,12 +15,10 @@ else
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>
-                    Customer Id
-                </th>
-                <th>
-                    Customer Name
-                </th>
+                <th>Customer Id</th>
+                <th>Customer Name</th>
+                <th>Discount Rate</th>
+                <th>Membership Type</th>
             </tr>
         </thead>
         <tbody>
@@ -32,6 +30,12 @@ else
                     </td>
                     <td>
                         @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                    </td>
+                    <td>
+                        @customer.MembershipType.DiscountRate%
+                    </td>
+                    <td>
+                        @customer.MembershipType.Name
                     </td>
                 </tr>
             }
