--- a/Vidly_V2/Vidly_V2/Views/Customers/Index.cshtml
+++ b/Vidly_V2/Vidly_V2/Views/Customers/Index.cshtml
@@ -19,25 +19,30 @@ else
                 <th>Customer Name</th>
                 <th>Discount Rate</th>
                 <th>Membership Type</th>
+                <th>Edit</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var customer in Model)
             {
-                <tr>
-                    <td>
-                        @customer.Id
-                    </td>
-                    <td>
-                        @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
-                    </td>
-                    <td>
-                        @customer.MembershipType.DiscountRate%
-                    </td>
-                    <td>
-                        @customer.MembershipType.Name
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @customer.Id
+                </td>
+                <td>
+                    @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                </td>
+                <td>
+                    @customer.MembershipType.DiscountRate%
+                </td>
+                <td>
+                    @customer.MembershipType.Name
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", "Customers", new { id = customer.Id }, null)
+                </td>
+
+            </tr>
             }
         </tbody>
     </table>
