--- a/Vidly_V2/Vidly_V2/Views/Movies/Index.cshtml
+++ b/Vidly_V2/Vidly_V2/Views/Movies/Index.cshtml
@@ -7,6 +7,14 @@
 
 <h2>Movies</h2>
 
+<p>
+    @*<button type="button" class="btn btn-primary">New Movie</button>*@
+    @Html.ActionLink("New Movie", "New","Movies", null, new { @class = "btn btn-primary"})
+</p>
+
+
+
+
 @if (!Model.Any())
 {
     <p> We do not have any Movies yet.</p>
@@ -19,19 +27,23 @@ else
                 <th>Id</th>
                 <th>Movie Name</th>
                 <th>Genre</th>
+                <th>Edit</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var movie in Model)
             {
-                <tr>
-                    <td>@movie.Id</td>
-                    @*<td>@movie.Name</td>*@
-                    <td>
-                        @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
-                    </td>
-                    <td>@movie.Genre.Name</td>
-                </tr>
+            <tr>
+                <td>@movie.Id</td>
+                @*<td>@movie.Name</td>*@
+                <td>
+                    @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
+                </td>
+                <td>@movie.Genre.Name</td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", "Movies", new { id = movie.Id }, null)
+                </td>
+            </tr>
             }
         </tbody>
     </table>
